--- a/Attempting to install GDAL on a mac.ipynb
+++ b/Attempting to install GDAL on a mac.ipynb
@@ -4,12 +4,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Installing GDAL on a mac is hard, and I dont reccomend it.  If you're foolhardy enough to try, then here are some pointers.\n",
+    "\n",
     "I have heard rumors that it's possible to install GDAL on a mac using anaconda.  I can't confirm these rumors, since I had to [compile it from source](http://alanschoen.com/install_gdal_mac/)\n",
     "\n",
     "```\n",
-    "conda create --name geo python=3.4 numpy scipy pandas jupyter\n",
+    "conda create --name geo python=3.5 numpy scipy pandas jupyter\n",
+    "conda activate geo\n",
     "conda install -c https://conda.anaconda.org/ioos geopandas=0.2.1\n",
     "```\n",
+    "\n",
+    "You might also need to do this, but it's not entirely clear to me when you need to do it:\n",
+    "```\n",
+    "conda install -c conda-forge gdal=2.1.3\n",
+    "conda install -c conda-forge fiona “libgdal<2.0”\n",
+    "```\n",
+    "\n",
+    "If you get it working, I would appreciate your feedback.\n",
+    "\n",
+    "### Test it out\n",
+    "Now that you effortlessly installed gdal and geopandas, let's test it out.\n",
     "\n",
     "Now we can try using GDAL.  If this code runs without crashing, then you're all good!"
    ]
@@ -35,6 +49,20 @@
     "\n",
     "bbox = (ulx, uly, lrx, lry)\n",
     "projection = dataset.GetProjectionRef()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import geopandas as gpd\n",
+    "\n",
+    "buildings = gpd.read_file('vectors/building_centers.geojson')\n",
+    "buildings.unary_union"
    ]
   }
  ],
