Add info about GlobData land cover

--- a/Download Ground-Truth Data from OSM.ipynb
+++ b/Download Ground-Truth Data from OSM.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to get ground truth, we're going to download data from OpenStreetMaps.  OpenStreetMaps can be hard to work with, but fortunately there is a great library that can help called geopandas osm.  If you haven't already, you will need to set up the geospatial tools before you can use this script."
+    "In order to get ground truth, we're going to download data from OpenStreetMaps.  OpenStreetMaps can be hard to work with, but fortunately there is a great library that can help called geopandas osm.  If you haven't already, you will need to set up the geospatial tools before you can use this script.\n",
+    "\n",
+    "This script downloads map features from OSM.  OSM has a lot of different features, like buildings, waterways, and nature.  You can find a description of the features on the [OSM Wiki](http://wiki.openstreetmap.org/wiki/Map_Features)"
    ]
   },
   {
@@ -211,6 +213,48 @@
     "print(nature.natural.unique())\n",
     "print(nature.shape)\n",
     "nature.to_file('vectors/nature.geojson', 'GeoJSON')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "We're going to need to decide what categories to train our model on.  In order to decide that, let's look at the GlobCover categories, and the land types in OSM and decide how to categorize things.\n",
+    "\n",
+    "Here are the land types in GlobCover\n",
+    "* Post-flooding or irrigated croplands (or aquatic)\n",
+    "* Rainfed croplands\n",
+    "* Mosaic cropland (50-70%) / vegetation (grassland/shrubland/forest) (20-50%)\n",
+    "* Mosaic vegetation (grassland/shrubland/forest) (50-70%) / cropland (20-50%) \n",
+    "* Closed to open (>15%) broadleaved evergreen or semi-deciduous forest (>5m)\n",
+    "* Closed (>40%) broadleaved deciduous forest (>5m)\n",
+    "* Open (15-40%) broadleaved deciduous forest/woodland (>5m)\n",
+    "* Closed (>40%) needleleaved evergreen forest (>5m)\n",
+    "* Open (15-40%) needleleaved deciduous or evergreen forest (>5m)\n",
+    "* Closed to open (>15%) mixed broadleaved and needleleaved forest (>5m)\n",
+    "* Mosaic forest or shrubland (50-70%) / grassland (20-50%)\n",
+    "* Mosaic grassland (50-70%) / forest or shrubland (20-50%) \n",
+    "* Closed to open (>15%) (broadleaved or needleleaved, evergreen or deciduous) shrubland (<5m)\n",
+    "* Closed to open (>15%) herbaceous vegetation (grassland, savannas or lichens/mosses)\n",
+    "Sparse (<15%) vegetation\n",
+    "* Closed to open (>15%) broadleaved forest regularly flooded (semi-permanently or temporarily) - Fresh or brackish water\n",
+    "* Closed (>40%) broadleaved forest or shrubland permanently flooded - Saline or brackish water\n",
+    "* Closed to open (>15%) grassland or woody vegetation on regularly flooded or waterlogged soil - Fresh, brackish or saline water\n",
+    "* Artificial surfaces and associated areas (Urban areas >50%)\n",
+    "* Bare areas\n",
+    "* Water bodies\n",
+    "* Permanent snow and ice\n",
+    "* No data (burnt areas, clouds,…)\n",
+    "\n",
+    "Looking at the data from OSM, I think reasonable categories would be:\n",
+    "* Water\n",
+    "* Wood\n",
+    "* Urban\n",
+    "\n",
+    "We can get find the land in each category by looking at the OSM features."
    ]
   },
   {
