Rename SpaceNet notebook and add introductory sentence

--- a/Get Started With SpaceNet Images.ipynb
+++ b/Get Started With SpaceNet Images.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This notebook covers how to download the SpaceNet data, and how to get started viewing it with QGIS and Python.\n",
+    "\n",
     "## Install and Configure AWS CLI\n",
     "\n",
     "You'll need the Amazon AWS command-line interface installed and configured before you can download the SpaceNet data from S3.  Follow the [installation instructions on the AWS website](http://docs.aws.amazon.com/cli/latest/userguide/installing.html).  Generally, `awscli` installs with pip, but you might need to debug your installation.\n",
