--- a/Get Started With SpaceNet Images.ipynb
+++ b/Get Started With SpaceNet Images.ipynb
@@ -31,9 +31,10 @@
     "aws s3api get-object --bucket spacenet-dataset --key AOI_3_Paris/AOI_3_Paris_Train.tar.gz --request-payer requester AOI_3_Paris_Train.tar.gz\n",
     "```\n",
     "\n",
-    "Now the file will start downloading.  You will be billed by AWS for downloading this file, but it doesn't cost much.  I think it's just a couple of dollars to download all of the SpaceNet data.  Just don't do it more than once and you'll be fine.  It usually takes a couple of minutes to finish the download.  Once it's done, you can unpack the file\n",
+    "Now the file will start downloading.  You will be billed by AWS for downloading this file, but it doesn't cost much.  I think it's just a couple of dollars to download all of the SpaceNet data.  Just don't do it more than once and you'll be fine.  It usually takes a couple of minutes to finish the download.  Once it's done, you can open the file and start exploring.\n",
     "\n",
     "## Explore SpaceNet Data\n",
+    "Unpack the file using the tar command:\n",
     "```\n",
     "tar -xf AOI_3_Paris_Train.tar.gz\n",
     "```\n",
@@ -91,11 +92,11 @@
     "## Display an image in QGIS\n",
     "Now launch QGIS.  Gotta love that design, eh?  QGIS has a fantastic, user-friendly, and intuitive interface, so this should be easy.  Just kidding.  Go to menu bar and click `Layer -> Add Layer -> Add Raster Layer`.  Now navigate to the `AOI_3_Paris_Train` folder and open `MUL-PanSharpen/MUL-PanSharpen_AOI_3_Paris_img100.tif`  I went down the list to image 100 because some of the images at the top of the list are cut off at weird angles.  Now you should see a city block in paris.  \n",
     "\n",
-    "![title](assets/Screenshot from 2017-05-15 10-27-53.png)\n",
+    "![Screenshot showing the city block in QGIS](assets/Screenshot from 2017-05-15 10-27-53.png)\n",
     "\n",
     "This image has 8 bands, but only 3 bands are being shown.  In the lower-left portion of the screen, you can see the name of the \"layer\" you're looking at.  QGIS can superimpose different layers on top of each other just like Photoshop or Illustrator.  If you want to explore some of the other color bands, double click on the layer name and then choose the \"Style\" tab on the side.  Now we can change the Red, Green, or Blue band in QGIS so it will show data from a different band.  This doesn't change the file, it just changes the way QGIS displays it.  It will make the image look weird.\n",
     "\n",
-    "![title](assets/Screenshot from 2017-05-15 10-31-24.png)\n",
+    "![Screenshot showing weird color bands](assets/Screenshot from 2017-05-15 10-31-24.png)\n",
     "\n",
     "Here I set the Red band to display Band 5, which had the effect of turning the image pink."
    ]
@@ -120,7 +121,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import rasterio\n",
@@ -170,7 +173,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This image looks weird because its actually an 11-bit image stored in 16 bit integers.  You can try to figure out what that means, or you can just run the next cell which will make everything look better"
+    "`src.read([5, 3, 2])` tells rasterio to load the RGB bands from the 8-channel tiff image.  By default, the number of channels will come before width and height, so `transpose([1,2,0])` reorders the dimensions into the order that other python packages will deal with.\n",
+    "\n",
+    "The image looks weird because its actually an 11-bit image stored in 16 bit integers.  You can try to figure out what that means, or you can just run the next cell which will make everything look better"
    ]
   },
   {
@@ -246,7 +251,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also look at some of the geo metadata.  This stuff is compllicated, but I'll cover it in some more notebooks."
+    "This image contains geo metadata that tells us stuff about how where the image was taken.  This stuff is compllicated, but I'll cover it in some other notebooks.  For now, just behold at the garbled nonsense that is CRS and projection metadata:"
    ]
   },
   {
@@ -280,7 +285,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's have a look at the bounding box for the image."
+    "Let's have a look at the bounding box for the image, which is a bit easier to interpret."
    ]
   },
   {
@@ -307,9 +312,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Those are lon/lat coordinates.  In other words, the bottom left corner of the box is at `49.0231359, 2.20922639996`.  Let's confirm this by [googling it](https://www.google.com/search?q=49.0231359%2C+2.20922639996)\n",
+    "Those are lon/lat coordinates (in case you're wondering, it's the `epsg:4326` above that lets me know the bounding box will be in regular old WGS84 lon/lat coords).  In other words, the bottom left corner of the box is at `49.0231359, 2.20922639996` in lat/lon coords (yes, the lat and the lon switched order. Geospatial data is suuuper fun to work with).  Let's confirm the coordinates by [googling them](https://www.google.com/search?q=49.0231359%2C+2.20922639996)\n",
     "\n",
-    "If you click that link, you should see a point in paris."
+    "If you click that link, you should see google maps with a pin in a spot in Paris."
    ]
   },
   {
