Update QGIS installation instructions

--- a/Get Started With SpaceNet Images.ipynb
+++ b/Get Started With SpaceNet Images.ipynb
@@ -73,6 +73,8 @@
     "### Mac\n",
     "You can download QGIS from the QGIS website: http://www.qgis.org/en/site/forusers/download.html\n",
     "\n",
+    "You can also try installing it with homebrew (don't do both): http://usabilityetc.com/2016/06/how-to-install-qgis-with-homebrew/\n",
+    "\n",
     "\n",
     "### Ubuntu\n",
     "If you're on Ubuntu, I reccomend installing it using the ubuntugis ppa. These commands will also install GDAL\n",
