Update QGIS installation instructions

--- a/Get Started With SpaceNet Images.ipynb
+++ b/Get Started With SpaceNet Images.ipynb
@@ -71,7 +71,7 @@
     "## Install QGIS\n",
     "\n",
     "### Mac\n",
-    "You can download QGIS from the QGIS website: http://www.qgis.org/en/site/forusers/download.html\n",
+    "You can download QGIS from the [QGIS website](http://www.qgis.org/en/site/forusers/download.html) (more detailed instructions [here](http://drjill.net/install-qgis-on-a-mac-in-8-steps/))\n",
     "\n",
     "You can also try installing it with homebrew (don't do both): http://usabilityetc.com/2016/06/how-to-install-qgis-with-homebrew/\n",
     "\n",
