Add link to geocarto

--- a/Get Started With SpaceNet Images.ipynb
+++ b/Get Started With SpaceNet Images.ipynb
@@ -175,7 +175,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`src.read([5, 3, 2])` tells rasterio to load the RGB bands from the 8-channel tiff image.  By default, the number of channels will come before width and height, so `transpose([1,2,0])` reorders the dimensions into the order that other python packages will deal with.\n",
+    "`src.read([5, 3, 2])` tells rasterio to load the RGB bands from the 8-channel tiff image.  By default, the number of channels will come before width and height, so `transpose([1,2,0])` reorders the dimensions into the order that other python packages will deal with.  Check out [this website](http://www.geocarto.com.hk/edu/PJ-BCMBWV3G/main_BCW3.html) to understand why it was `[5, 3, 2]` and not `[1, 2, 3]`.\n",
     "\n",
     "The image looks weird because its actually an 11-bit image stored in 16 bit integers.  You can try to figure out what that means, or you can just run the next cell which will make everything look better"
    ]
