Text update to OSM download notebook

--- a/Download Ground-Truth Data from OSM.ipynb
+++ b/Download Ground-Truth Data from OSM.ipynb
@@ -279,9 +279,7 @@
    "metadata": {},
    "source": [
     "# Matching OSM data to the SpaceNet images\n",
-    "Let's try something a little more advanced and find objects that fall inside the images.\n",
-    "\n",
-    "\n"
+    "Let's try something a little more advanced and find objects that fall inside the Las Vegas images.\n"
    ]
   },
   {
