--- a/1. Get Started With SpaceNet Images.ipynb
+++ b/1. Get Started With SpaceNet Images.ipynb
@@ -51,12 +51,12 @@
     "When a satellite takes an image, it uses a few different cameras to collect different kinds of imagery.  There is a greyscale camera that takes a high resolution image, and then some other cameras that measure color at lower resolution.  The cameras that detect color are not as precise as the grayscale cameras.  Even so, we get full resolution color images.  These are made by mapping the color onto the high-resolution grayscale image.  This involves complicated math stuff (or so I assume), but you and I don't have to worry about that because it has already been taken care of.  That's what [pan-sharpening](http://desktop.arcgis.com/en/arcmap/10.3/manage-data/raster-and-images/fundamentals-of-panchromatic-sharpening.htm) is.\n",
     "\n",
     "Here's what's in each of the folders:\n",
-    "* geojson: GeoJSON is a variation of the JSON format desiged for storing geospatial vectors.  It's equivalent to the shapefile format, but easier to read.  This folder contains polygons that mark the shapes of buildings.\n",
-    "* `MUL`: This folder contains 8-band images at low resolution.  These 8 bands include the R, G, and B bands.  You probably don't want to use these, because you can just use MUL-Pansharpen, which is at full resolution.\n",
-    "* `MUL-PanSharpen`: The is 8-band images at full resolution.  It has been pan-sharpened for you already.  These are good images to use in training your model.\n",
-    "* `PAN`: This folder contains full-resolution grayscale images.\n",
-    "* `RGB-PanSharpen`: This folder contains RBG images at full resolution.  All the bands in these images are also in MUL-PanSharpen.  This folder is just there for convenience.  You could use these files for training your model if you're a naturally lazy and unambitious person :wink:\n",
-    "* `summaryData`: This folder contains a single csv file with all of the information in the geojson folder.  You can read it in python with one line: `gpd.read_csv('AOI_3_Paris_Train_Building_Solutions.csv')`\n",
+    "* **geojson**: GeoJSON is a variation of the JSON format desiged for storing geospatial vectors.  It's equivalent to the shapefile format, but easier to read.  This folder contains polygons that mark the shapes of buildings.\n",
+    "* **MUL**: This folder contains 8-band images at low resolution.  These 8 bands include the R, G, and B bands.  You probably don't want to use these, because you can just use MUL-Pansharpen, which is at full resolution.\n",
+    "* **MUL-PanSharpen**: This is 8-band images at full resolution.  It has been pan-sharpened for you already.  These are good images to use in training your model.\n",
+    "* **PAN**: This folder contains full-resolution grayscale images.\n",
+    "* **RGB-PanSharpen**: This folder contains RBG images at full resolution.  All the bands in these images are also in MUL-PanSharpen.  This folder is just there for convenience.  You could use these files for training your model if you're a naturally lazy and unambitious person :wink:\n",
+    "* **summaryData**: This folder contains a single csv file with all of the information in the geojson folder.  You can read it in python with one line: `gpd.read_csv('AOI_3_Paris_Train_Building_Solutions.csv')`\n",
     "\n",
     "I told you that all of the `.tif` files in the image folder are images, but you might find that if you try to open them like normal images they just look like blank black boxes.  This is because they're not normal images, they're geo-referenced tiff files.  Normal software often doesn't know what to do with these.  To view them, you can either use QGIS or just open them in python.\n",
     "\n",
