Edits to notebooks 1 and 3

--- a/1. Get Started With SpaceNet Images.ipynb
+++ b/1. Get Started With SpaceNet Images.ipynb
@@ -164,7 +164,7 @@
     "\n",
     "%matplotlib inline\n",
     "\n",
-    "# Load the RGB bands and reshape the image\n",
+    "# Load the RGB bands and transpose the image shape\n",
     "img = src.read([5, 3, 2]).transpose([1,2,0])\n",
     "\n",
     "# Plot it\n",
@@ -209,17 +209,25 @@
    "source": [
     "def scale_bands(img, lower_pct = 1, upper_pct = 99):\n",
     "    \"\"\"\n",
-    "    Rescale the bands of a multichannel image\n",
+    "    Rescale the bands of a multichannel image for display\n",
     "    \"\"\"\n",
     "    # Loop through the image bands, rescaling each one\n",
     "    img_scaled = np.zeros(img.shape, np.uint8)\n",
+    "    \n",
     "    for i in range(img.shape[2]):\n",
+    "        \n",
     "        band = img[:, :, i]\n",
+    "        \n",
+    "        # Pick out the lower and upper percentiles\n",
     "        lower, upper = np.percentile(band, [lower_pct, upper_pct])\n",
+    "        \n",
+    "        # Normalize the band\n",
     "        band = (band - lower) / (upper - lower) * 255\n",
+    "        \n",
+    "        # Clip the high and low values, and cast to uint8\n",
     "        img_scaled[:, :, i] = np.clip(band, 0, 255).astype(np.uint8)\n",
+    "        \n",
     "    return img_scaled\n",
-    "\n",
     "\n",
     "\n",
     "# Plot the rescaled image\n",
@@ -329,7 +337,7 @@
     "collapsed": true
    },
    "source": [
-    "# Taking Inventory on the Paris data\n",
+    "# Taking Inventory of the Paris images\n",
     "I downloaded the Paris data onto my computer, and now I want to search through it and find all of the bounding boxes.  Rasterio makes this pretty simple.  I hard-coded the location of these files on my computer, so you'll need to change that path to run this on your computer."
    ]
   },
@@ -346,15 +354,23 @@
     "\n",
     "image_dir_path = '/media/alan/storage/data/spacenet/AOI_3_Paris_Train/MUL-PanSharpen'\n",
     "\n",
+    "# Collect a list of all the images with the .tif extension\n",
     "tiff_images = [os.path.join(image_dir_path, image_name) \n",
     "               for image_name in os.listdir(image_dir_path) \n",
     "               if image_name.lower().endswith('tif')]\n",
     "\n",
     "res = []\n",
+    "\n",
     "for image_file_name in tiff_images:\n",
+    "    \n",
     "    with rasterio.open(image_file_name) as src:\n",
+    "        \n",
+    "        # Convert the image bounding box into a shapely polygon\n",
     "        bbox = shapely.geometry.box(*src.bounds)\n",
+    "        \n",
     "    res.append((image_file_name, bbox))\n",
+    "\n",
+    "# Convert the results into a GeoDataFrame\n",
     "image_summary = gpd.GeoDataFrame(res, columns=['image_name', 'geometry'], crs={'init': 'epsg:4326'})"
    ]
   },
