--- a/3. Make training masks from OSM data.ipynb
+++ b/3. Make training masks from OSM data.ipynb
@@ -756,7 +756,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's see what part of this image is covered by forest.  It looks like th"
+    "Now let's see what part of this image is covered by forest.  In order to do this we will have to\n",
+    "1. Find the intersection between the forest polygon and the image\n",
+    "2. Convert the polygon into the image's pixel coordinates\n",
+    "3. Plot the polygon and image together\n",
+    "\n",
+    "Normally, we would have to make sure that the polygon and the image are in the same CRS.  I happen to already know that's the case, so we can skip that step (yay!)."
    ]
   },
   {
@@ -920,7 +925,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ok, great.  Now let's finally make that mask.  We're going to use opencv to fill in the polygon."
+    "Ok, great.  Looks like we got a circular farm bordered by forest.  Now let's finally make that mask.  We're going to use OpenCV to fill in the polygon, so make sure you have OpenCV installed."
    ]
   },
   {
