Add note about paths in image_summary.geojson

--- a/3. Make training masks from OSM data.ipynb
+++ b/3. Make training masks from OSM data.ipynb
@@ -614,7 +614,9 @@
    "source": [
     "So we can see that the two sources of data are mostly independent.  There's a little overlap, but not much.  So make sure that whatever kind of data you're using, that you find all the places you need to look.\n",
     "\n",
-    "Now let's see where the spacenet images are.  We'll load the image_summary.geojson file that we made in the exploring OSN notebook and plot it on top of the two sources of forest data."
+    "Now let's see where the spacenet images are.  We'll load the image_summary.geojson file that we made in the exploring OSN notebook and plot it on top of the two sources of forest data.\n",
+    "\n",
+    "WARNING: The image_summary.geojson file included with this repo refers to paths on MY computer.  You will need to run the first script on your computer before you can proceed here so that you will overwright my version with your own version."
    ]
   },
   {
