Update installation instructions

--- a/Setup (Ubuntu).ipynb
+++ b/Setup (Ubuntu).ipynb
@@ -4,9 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Python Tools\n",
+    "\n",
     "In order to work on geospatial tools, you will need to install the toolset for geospatial data.  Everything here relies in GDAL.  GDAL is a core set of tools for reading, writing, and manipulating geospatial data formats.  It is very hard to install.  It's possible to install it on a mac, but it isnt easy.\n",
     "\n",
-    "GDAL:\n",
+    "### GDAL + GeoPandas:\n",
     "```\n",
     "sudo add-apt-repository ppa:ubuntugis/ppa\n",
     "sudo apt-get update\n",
@@ -16,16 +18,62 @@
     "export CPLUS_INCLUDE_PATH=/usr/include/gdal\n",
     "export C_INCLUDE_PATH=/usr/include/gdal\n",
     "\n",
-    "pip install ipython jupyter\n",
-    "pip install numpy scipy scikit-learn scikit-image beautifulsoup4 opencv-python\n",
-    "pip install shapely fiona geopandas geoio owslib tifffile h5py\n",
+    "pip install numpy scipy scikit-learn scikit-image\n",
+    "pip install shapely fiona geopandas\n",
     "```\n",
     "\n",
-    "Install geopandas osm\n",
+    "### Install geopandas osm\n",
     "```\n",
     "pip install git+git://github.com/jwass/geopandas_osm.git\n",
-    "```\n"
+    "```\n",
+    "\n",
+    "### OpenCV:\n",
+    "```\n",
+    "sudo apt-get install libopencv-dev python-opencv\n",
+    "pip install opencv-python\n",
+    "```\n",
+    "\n",
+    "### Rasterio\n",
+    "```\n",
+    "pip install rasterio\n",
+    "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# GPU Setup\n",
+    "If you want to use machine learning tools on a GPU, you will have to set up the GPU tools.  If you aren't training NNs on this computer, or if the computer is already configured, then you can skip this part.\n",
+    "\n",
+    "### Install cuda  \n",
+    "https://developer.nvidia.com/cuda-downloads\n",
+    "`sudo dpkg -i cuda-repo-ubuntu1404-8-0-local-ga2_8.0.61-1_amd64.deb`\n",
+    "`sudo apt-get update`\n",
+    "`sudo apt-get install cuda`\n",
+    "\n",
+    "### Install CUDNN\n",
+    "Once the CUDA Toolkit is installed, download cuDNN v5.1 Library for Linux (note that you'll need to register for the Accelerated Computing Developer Program).\n",
+    "Once downloaded, uncompress the files and copy them into the CUDA Toolkit directory (assumed here to be in /usr/local/cuda/):\n",
+    "```\n",
+    "sudo tar -xvf cudnn-8.0-linux-x64-v5.1.tgz -C /usr/local\n",
+    "```\n",
+    "\n",
+    "### Install TensorFlow and Keras\n",
+    "```\n",
+    "pip install tensorflow\n",
+    "pip install keras\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
