--- a/2. Download Ground-Truth Data from OSM.ipynb
+++ b/2. Download Ground-Truth Data from OSM.ipynb
@@ -248,44 +248,23 @@
     "* Permanent snow and ice\n",
     "* No data (burnt areas, clouds,…)\n",
     "\n",
-    "Looking at the data from OSM, I think reasonable categories would be:\n",
-    "* Water\n",
-    "* Wood\n",
-    "* Urban\n",
-    "\n",
-    "We can get find the land in each category by looking at the OSM features."
+    "You can see that the GlobCover categories are very different from the things that are available in OSM.  For this reason, it's not practical to just try to recreate GlobCover.  You are welcome to come up with any category you want.  It doesn't have to match anything on that list at all.  Just to drive that point home, I'm going to look at solar panels for the rest of this notebook. :trollface:"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Matching OSM data to the SpaceNet images\n",
-    "Let's try something a little more advanced and find objects that fall inside the Las Vegas images.\n"
+    "Let's try something a little more advanced and find objects that fall inside the Las Vegas images.  I'm going to set aside landcover for now and work with the solar panel markings.  If you want, you can skip this section and go right on to the next notebook where I'll go back to dealing with landcover.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -563,7 +542,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Well that's not what I was expecting.  It looks like we're not going to be ale to work with these markings.  On the other hand, I'm pretty sure I see some solar panels in that image."
+    "Well that's not what I was expecting.  The box is way to big to represent a solar panel. It looks like we're not going to be ale to work with the solar panel markings.  That's dissapointing, but it's not a total loss.  I'm pretty sure I see some solar panels in that image, which we could mark by hand.\n",
+    "\n",
+    "Fortunately, not all of the categories are as bad as solar panels.  The forst markings happen to be quite accurate, so I'll switch to working with forests in the next notebook, where I show how to create a training mask from OSM data."
    ]
   }
  ],
