--- a/3. Make training masks from OSM data.ipynb
+++ b/3. Make training masks from OSM data.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook will cover how to turn OSM data into image masks that you can use to train an NN.  When we get this data, it's formatted as vectors, meaning it contains information about the outlines of objects.  In order to use it to train an NN, we need to create raster images out of it.  We can use OpenCV for this task.\n",
+    "This notebook will cover how to turn OSM data into image masks that you can use to train an NN.  When we get this data, it's formatted as vectors, meaning it contains information about the outlines of objects.  In order to use it to train an NN, we need to create raster images that match the size of the input images.\n",
     "\n",
-    "OpenCV has a function called `fillPoly` that fills in polygons, but we can't use it right away because `fillPoly` assumes that all of your polygons are in image coordiantes, but our objects are in geospatial coordinates.  So first, we will have to transform our geospatial data into image coordinates.\n",
+    "We can use OpenCV for this task, because OpenCV has a function called `fillPoly` that fills in polygons. But we can't use it right away because `fillPoly` assumes that all of your polygons are in image coordiantes, but our polygons are in geospatial coordinates.  So first, we will have to transform our geospatial data into image coordinates.\n",
     "\n",
-    "To create our training images, we will have to do the following things\n",
+    "To create our training masks, we will have to do the following things\n",
     "1. Find the objects that intersect with the image\n",
     "2. Make sure the vector data is in the same CRS as the image\n",
     "3. Use the GeoTiff metadata to transform the geospatial coordinates into image coordinates\n",
@@ -987,13 +987,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "That's just what we need to train an NN.  The image above is called a mask.  It's a binary image with two values (0 and 255 in this case).  The 255 values tell us where the forest is.  These are the white pixels in the image above.  Now that we know how to create a single mask to match an image tile, we can move on to creating entire training set and that will be the topic of the next notebook."
+   ]
   }
  ],
  "metadata": {
