Add NN training notebook

--- a/Setup (Ubuntu).ipynb
+++ b/Setup (Ubuntu).ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Python Tools\n",
     "\n",
@@ -36,12 +39,24 @@
     "### Rasterio\n",
     "```\n",
     "pip install rasterio\n",
+    "```\n",
+    "\n",
+    "### TensorFlow / Keras\n",
+    "Follow these instructions\n",
+    "http://ramhiser.com/2016/01/05/installing-tensorflow-on-an-aws-ec2-instance-with-gpu-support/\n",
+    "\n",
+    "And install h5py too\n",
+    "```\n",
+    "pip install h5py\n",
     "```"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# GPU Setup\n",
     "If you want to use machine learning tools on a GPU, you will have to set up the GPU tools.  If you aren't training NNs on this computer, or if the computer is already configured, then you can skip this part.\n",
@@ -70,7 +85,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
