Add info about TensorBoard and nvidia-smi

--- a/4. Train a Model.ipynb
+++ b/4. Train a Model.ipynb
@@ -107,6 +107,16 @@
     "    cv2.fillPoly(mask, polys, 255)\n",
     "    return mask.astype('uint8')\n",
     "\n",
+    "def scale_bands(img, lower_pct = 1, upper_pct = 99):\n",
+    "    \"\"\"Rescale the bands of a multichannel image for display\"\"\"\n",
+    "    img_scaled = np.zeros(img.shape, np.uint8)\n",
+    "    for i in range(img.shape[2]):\n",
+    "        band = img[:, :, i]\n",
+    "        lower, upper = np.percentile(band, [lower_pct, upper_pct])\n",
+    "        band = (band - lower) / (upper - lower) * 255\n",
+    "        img_scaled[:, :, i] = np.clip(band, 0, 255).astype(np.uint8)\n",
+    "    return img_scaled\n",
+    "\n",
     "# Build a training set\n",
     "def make_set(image_summary, vectors, training_set_size, random=np.random):\n",
     "    rows_to_use = random.choice(image_summary.index, training_set_size, replace=False)\n",
@@ -115,6 +125,7 @@
     "    for i, row in image_summary.loc[rows_to_use].iterrows():\n",
     "        with rasterio.open(row.image_name) as src:\n",
     "                img = src.read().transpose([1,2,0])\n",
+    "                img = scale_bands(img, lower_pct = 5, upper_pct = 95)\n",
     "                img_bounds = shapely.geometry.box(*src.bounds)\n",
     "                img_transform = list(np.array(~src.affine)[[0, 1, 3, 4, 2, 5]])\n",
     "\n",
@@ -274,11 +285,13 @@
     "1. **ModelCheckpoint**: This callback saves a checkpoint of the weights on each iteration.  This will let you look back and retrieve a model from different times during training.  I set the checkpoint files to be named according to epoch number and validation loss.  The final cell in this notebook shows how to load a model.\n",
     "2. **ReduceLROnPlateau**: This callback is designed to lower the learning rate during training.  It monitors the validation loss, and when it sees that the model isn't improving anymore, it automatically decreases the learning rate.  The `patience`, `epsilon`, and `cooldown` parameters determine when the learning rate will reduce and the `factor` parameter determines by how much.\n",
     "3. **LearningRateScheduler**: Is a simpler way to reduce the learning rate.  It uses a pre-determined function to reduce the learning rate during learning.  You can define whatever function (of epoch number) you want.\n",
-    "4. **TensorBoard**: This callback will save logs for use with TensorBoard.  TensorBoard is a tool for visualizing your NN training.  It runs a web server (sort of like Jupyter) so you can see the visualizations in your browser.  It's built into TensorFlow (which we're using as a backend behind Keras).\n",
+    "4. **TensorBoard**: This callback will save logs for use with TensorBoard.  TensorBoard is a tool for visualizing your NN training.  It runs a web server (sort of like Jupyter) so you can see the visualizations in your browser.  It's built into TensorFlow (which we're using as a backend behind Keras).   Run `tensorboard --logdir=/tmp/tboard_logs --port 6006` to launch the server, and then open localhost:6006 in your browser to see the visualizations.\n",
     "\n",
     "Then the model.fit function actually trains the NN.  We tell it which callbacks to use by setting the `callbacks` parameter.\n",
     "\n",
-    "I set up this notebook to run 5 epochs.  That's not nearly enough to actually learn anything, but I'm just trying to show you that all the pieces work.  I would reccomend training for hundreds of epochs."
+    "I set up this notebook to run 5 epochs.  That's not nearly enough to actually learn anything, but I'm just trying to show you that all the pieces work.  I would reccomend training for hundreds of epochs.\n",
+    "\n",
+    "Training should push your GPU to the limit.  If you want to check on your GPU usage, run `watch -n0.1 nvidia-smi` at the terminal."
    ]
   },
   {
@@ -343,12 +356,9 @@
     "# schedule_lr = LearningRateScheduler(schedule)\n",
     "\n",
     "# TensorBoard visuluaziations... this stuff is so freaking cool\n",
-    "# Run `tensorboard --logdir=/tmp/tboard_logs --port 6006` to see some visualizations of your training\n",
-    "tensorboard = TensorBoard(log_dir='/tmp/tboard_logs', histogram_freq=0, write_graph=True, write_images=True)\n",
-    "\n",
+    "tensorboard = TensorBoard(log_dir='/tmp/tboard_logs1', histogram_freq=0, write_graph=True, write_images=True)\n",
     "\n",
     "# Train the model\n",
-    "# To monitor GPU usage, run `watch -n0.1 nvidia-smi` at the terminal\n",
     "model = get_unet(0.003)\n",
     "model.fit(X_train, Y_train, batch_size=8, epochs=NUM_EPOCHS, verbose=1, shuffle=True, callbacks=[model_checkpoint, reduce_lr, tensorboard], validation_data=(X_val, Y_val))"
    ]
@@ -407,17 +417,6 @@
     "\n",
     "# Run the model on that sample\n",
     "pred = model.predict(X[None, :, :]).squeeze()\n",
-    "\n",
-    "# Copied from past notebooks...\n",
-    "def scale_bands(img, lower_pct = 1, upper_pct = 99):\n",
-    "    \"\"\"Rescale the bands of a multichannel image for display\"\"\"\n",
-    "    img_scaled = np.zeros(img.shape, np.uint8)\n",
-    "    for i in range(img.shape[2]):\n",
-    "        band = img[:, :, i]\n",
-    "        lower, upper = np.percentile(band, [lower_pct, upper_pct])\n",
-    "        band = (band - lower) / (upper - lower) * 255\n",
-    "        img_scaled[:, :, i] = np.clip(band, 0, 255).astype(np.uint8)\n",
-    "    return img_scaled\n",
     "\n",
     "# Plot it\n",
     "fig, (ax1, ax2, ax3) = plt.subplots(1,3, figsize=(8,4))\n",
