Update mac setup instructions to include geopandas_osm

--- a/Setup (Mac).ipynb
+++ b/Setup (Mac).ipynb
@@ -21,6 +21,7 @@
     "\n",
     "If you get it working, I would appreciate your feedback.\n",
     "\n",
+    "\n",
     "### Test it out\n",
     "Now that you effortlessly installed gdal and geopandas, let's test it out.\n",
     "\n",
@@ -30,7 +31,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import gdal, gdalconst\n",
@@ -82,27 +85,23 @@
     "This one should be easy\n",
     "```\n",
     "conda install rasterio\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "```\n",
+    "\n",
     "### Install Opencv\n",
     "```\n",
     "conda install opencv\n",
+    "```\n",
+    "\n",
+    "### Install geopandas_osm\n",
+    "```\n",
+    "pip install git+git://github.com/jwass/geopandas_osm.git\n",
+    "```\n",
+    "\n",
+    "### Install Tensorflow and Keras\n",
+    "```\n",
+    "pip install tensorflow keras h5py\n",
     "```"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
